Fix spacing issue of form on large displays

--- a/styles/main.css
+++ b/styles/main.css
@@ -165,6 +165,7 @@ h3 {
 
 #form-div {
     max-width: 670px;
+    padding-left: 10px;
 }
 
 #form {
